# aichatbot

./: pyproject.toml
bot/: __main__.py
bot/handlers/: __init__.py
bot/handlers/cmds/: __init__.py  end_chat.py  new_chat.py  start.py
bot/utils/: __init__.py  func.py
