[project]
name = "aichatbot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiogram>=3.21.0",
    "aiomysql>=0.2.0",
    "groq>=0.30.0",
    "msgspec>=0.19.0",
    "python-dotenv>=1.1.1",
    "redis[asyncio]>=6.2.0",
    "sqlalchemy>=2.0.41",
]
